// Copyright 2022 Google LLC
//
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file or at
// https://developers.google.com/open-source/licenses/bsd

syntax = "proto3";

package cloud.ai.visionai.streams.lva.proto;

option java_multiple_files = true;


// K8SOneProgram is the output of the k8s_one compiler backend.
//
// It contains all of the information to complete a k8s yaml that can be
// directly executed on a k8s cluster.
message K8SOneProgram {
  // These are the placeholder names for input series.
  //
  // Each of these names must be associated with an actual series name in order
  // for the yaml template to be completed.
  repeated string input_series_placeholder_names = 1;

  // These are the placeholder names for output series.
  //
  // Each of these names must be associated with an actual series name in order
  // for the yaml template to be completed.
  repeated string output_series_placeholder_names = 2;

  // This is a text/template containing the k8s yaml that must be completed
  // before it can be applied directly on a k8s cluster.
  string yaml_template = 3;
}
